--- a/checkpoint/CH3.Rmd
+++ b/checkpoint/CH3.Rmd
@@ -409,13 +409,10 @@ Our demographic and socioeconomic data are drawn from the American Community Sur
 > Our data has 242 observations of 23 variables. Below is a preview of our dataset with colnames attached.
 
 ```{r eval = TRUE}
+library(kableExtra)
 dim(nyc_clean)
 
-head(nyc_clean) %>% 
-  as.tibble() %>% 
-  kable() %>% 
-  kable_styling() %>%
-  scroll_box()
+kable(head(nyc_clean)) %>% kable_styling() 
 ```
 
 > Below is a summary of each variable's distribution.
@@ -529,7 +526,17 @@ ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_negbin,
 
 ### Models 2 & 3: Hierarchy by Neighborhood
 
-```{r,  cache=TRUE}
+#### Poisson {-}
+
+$$\begin{split}
+\text{White}_{ij} \mid  \beta_{0j}, \beta_1, ..., \beta_k, \sigma_y & \sim \text{Pois}(\lambda_{ij}) \\
+& \text{where} \log(\lambda_{ij}) = \beta_{0j} + \sum^{11}_{k=1}X_{ijk}\beta_k \\
+\beta_{0j} \mid \beta_0, \sigma_0 & \stackrel{ind}{\sim} N(\beta_0, \sigma_0^2)\\
+\beta_{0c}, \beta_k & \stackrel{ind}{\sim} N(0,1) \\
+\sigma_y, \sigma_0 & \stackrel{ind}{\sim} Exp(1)
+\end{split}$$
+
+```{r}
 poisson_hierarchical <- stan_glmer(
  white_count ~  total_pop + mean_income + mean_rent + 
     unemployment_count + sub_count + 
@@ -540,17 +547,6 @@ poisson_hierarchical <- stan_glmer(
   family = poisson,
   chains = 4, iter = 500*2, seed = 84735, refresh = 0
 )
-
-negbin_hierarchical <- stan_glmer(
- white_count ~  total_pop + mean_income + mean_rent + 
-    unemployment_count + sub_count + 
-    perc_covered_by_transit + school_count + 
-    store_count + bus_count + 
-    eviction_count + uninsured_count + (1 | nta_id),
-  data = nyc_clean,
-  family = neg_binomial_2,
-  chains = 4, iter = 500*2, seed = 84735, refresh = 0
-)
 ```
 
 ```{r, fig.width=12, fig.height=6}
@@ -559,17 +555,9 @@ check_1 <- pp_check(poisson_hierarchical) +
   labs(title = "Poisson")+
   xlim(0,100000)+
   theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
-check_2 <- pp_check(negbin_hierarchical) + 
-  xlab("White Resident Count") +
-  xlim(0,100000)+
-  labs(title = "Negative Binomial")+
-  theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
 
-ggpubr::ggarrange(check_1, check_2, ncol=2, common.legend=TRUE, legend = "right")
-```
-
-```{r}
 library(kableExtra)
+
 tidy(poisson_hierarchical, effects = "fixed", conf.int = TRUE, conf.level = 0.95) %>% 
   
   mutate(estimate= ifelse(term == "(Intercept)", exp(estimate), (exp(estimate)-1)*100), 
@@ -580,18 +568,6 @@ tidy(poisson_hierarchical, effects = "fixed", conf.int = TRUE, conf.level = 0.95
   kable_styling()
 
 
-tidy(negbin_hierarchical, effects = "fixed", conf.int = TRUE, conf.level = 0.95)%>% 
-  
-  mutate(estimate= ifelse(term == "(Intercept)", exp(estimate), (exp(estimate)-1)*100), 
-         conf.low= ifelse(term == "(Intercept)", exp(conf.low), (exp(conf.low)-1)*100), 
-         conf.high = ifelse(term == "(Intercept)", exp(conf.high), (exp(conf.high)-1)*100))%>%
-  filter(conf.low	> 0 & conf.high > 0 | conf.low	< 0 & conf.high < 0) %>%
-  kable(align = "c", caption = "Hierarchichal Negative Binomial - Model Summary") %>% 
-  kable_styling()
-
-```
-
-```{r}
 nyc_predict_clean <- nyc_clean %>%
   na.omit()
 set.seed(84735)
@@ -616,6 +592,52 @@ ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_poisson,
         axis.title.y = element_blank(),
         axis.text.y = element_blank())+
   coord_flip() 
+```
+
+#### Negative Binomial {-}
+
+$$\begin{split}
+\text{White}_{ij} \mid  \beta_{0j}, \beta_1, ..., \beta_k, \sigma_y & \sim \text{NegBin}(\mu_{ij}, r) \\
+& \text{where} \log(\mu_{ij}) = \beta_{0j} + \sum^{11}_{k=1}X_{ijk}\beta_k \\
+\beta_{0j} \mid \beta_0, \sigma_0 & \stackrel{ind}{\sim} N(\beta_0, \sigma_0^2)\\
+\beta_{0c}, \beta_k & \stackrel{ind}{\sim} N(0,1) \\
+\sigma_y, \sigma_0 & \stackrel{ind}{\sim} Exp(1)
+\end{split}$$
+
+```{r,  cache=TRUE}
+negbin_hierarchical <- stan_glmer(
+ white_count ~  total_pop + mean_income + mean_rent + 
+    unemployment_count + sub_count + 
+    perc_covered_by_transit + school_count + 
+    store_count + bus_count + 
+    eviction_count + uninsured_count + (1 | nta_id),
+  data = nyc_clean,
+  family = neg_binomial_2,
+  chains = 4, iter = 500*2, seed = 84735, refresh = 0)
+```
+
+```{r, fig.width=12, fig.height=6}
+check_2 <- pp_check(negbin_hierarchical) + 
+  xlab("White Resident Count") +
+  xlim(0,100000)+
+  labs(title = "Negative Binomial")+
+  theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
+
+tidy(negbin_hierarchical, effects = "fixed", conf.int = TRUE, conf.level = 0.95)%>% 
+  
+  mutate(estimate= ifelse(term == "(Intercept)", exp(estimate), (exp(estimate)-1)*100), 
+         conf.low= ifelse(term == "(Intercept)", exp(conf.low), (exp(conf.low)-1)*100), 
+         conf.high = ifelse(term == "(Intercept)", exp(conf.high), (exp(conf.high)-1)*100))%>%
+  filter(conf.low	> 0 & conf.high > 0 | conf.low	< 0 & conf.high < 0) %>%
+  kable(align = "c", caption = "Hierarchichal Negative Binomial - Model Summary") %>% 
+  kable_styling()
+
+nyc_predict_clean <- nyc_clean %>%
+  na.omit()
+set.seed(84735)
+
+predictions_negbin <-  posterior_predict(
+  negbin_hierarchical, newdata = nyc_predict_clean)
 
 ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_negbin,
               prob_outer = 0.95) +
