--- a/checkpoint/CH3.Rmd
+++ b/checkpoint/CH3.Rmd
@@ -53,6 +53,18 @@ theme_set(theme_minimal())
 vari_names <- read_csv(here("clean_data", "nyc_names.csv"))
 nyc_clean <- st_read(here("clean_data", "nyc_data.shp"), crs = 4269) 
 colnames(nyc_clean) <- colnames(vari_names)
+
+
+library(openxlsx)
+nta_to_census <- openxlsx::read.xlsx(here("ethnic", "Data", "census_to_nta.xlsx")) %>%
+  dplyr::select(BoroName, NTACode) %>%
+  rename(borough = BoroName,
+         nta_id = NTACode) %>%
+  unique()
+
+nyc_clean <- nyc_clean %>%
+  merge(., nta_to_census, by="nta_id") %>%
+  mutate(transportation_desert_4cat = factor(transportation_desert_4cat, levels=c("No Access", "Limited Access", "Satisfactory Access", "Excellent Access")))
 ```
 
 ```{r}
@@ -156,16 +168,15 @@ ridership <- nyc_clean%>%
     guides(shape = guide_legend(override.aes = list(size = 8)),
            color = guide_legend(override.aes = list(size = 8)))
 
-
 access <- nyc_clean %>%
   ggplot() +
-  geom_sf(aes(fill = perc_covered_by_transit), color = "#8f98aa") +
-  scale_fill_gradient(low= "lavender", high = "maroon",
-                      guide = guide_legend(title = "Percent of Neighborhood within \n walking distance of a transit station"), na.value="#D6D6D6") +
+  geom_sf(aes(fill = transportation_desert_4cat), color = "#8f98aa") +
+  scale_fill_manual(values=c("#a45371","#e5b6c7","#ebebf7","#89a2d1"),
+                       guide = guide_legend(title = "Subway Accessibility Category"), na.value="#D6D6D6") +
   theme_minimal() +
   theme(panel.grid.major = element_line("transparent"),
         axis.text = element_blank()) +
-  ggtitle("Transit Accessibility \nin NYC")+ 
+  ggtitle("Subway Deserts \nin NYC")+ 
     theme(panel.grid.major = element_line("transparent"),
           plot.title = element_text(size = 30, face = "bold"),
           legend.title = element_text(size = 12), 
@@ -373,12 +384,11 @@ latinx <- ggplot(nyc_clean) +
 > Tidycensus is an R  package interface, developed by Kyle Walker and Matt Herman, that enables easy access to the US Census Bureau’s data APIs and returns Tidyverse-ready data frames from various major US Census Bureau datasets. 
 Our demographic and socioeconomic data are drawn from the American Community Survey results found in Tidycensus package. A summary of our ACS data variables is below:
 >
+- `borough:` Each Neighborhood's Borough.
 - `total_pop`: Total Population by Neighborhood
 - `mean_income`: Mean Income by Neighborhood
 - `below_poverty_line_count`: Number of People Living Below the 100% Poverty Line by Neighborhood
 - `mean_rent`:  Mean Rent by Neighborhood
->
->
 -  `unemployment_count`: Number of People on Unemployment by Neighborhood
 -  `latinx_count`: Number of Latinx People by Neighborhood
 - `white_count`: Number of White People by Neighborhood
@@ -397,102 +407,262 @@ Our demographic and socioeconomic data are drawn from the American Community Sur
 - `store_count`: Number of Grocery Stores and Food Vendors by Neighborhood 
 - `sub_count`: Number of Subway Stations by Neighborhood 
 - `bus_count`: Number of Bus Stations by Neighborhood
-- `perc_covered_by_transit`: Percent of Neighborhood within walking distance (.25 miles) of any transit stop. 
+- `perc_covered_by_transit`: Percent of Neighborhood Within Walking Distance (.25 miles) of Any Subway Stop. 
+- `transportation_desert_4cat`: Subway Accessibility by Neighborhood (None, Limited, Satisfactory, Excellent)
 >
-> Lastly, we acquired subway ridership from Metropolitan Transportation Authority’s turnstile data for the week of September 7, 2019. For each station, entry/exit of each turnstile is recorded. Then, we aggregated this information by taking the station-specific average of subway ridership across the 7 days in the week. Finally, we geotagged each listed station, then took the mean of ridership at all subway stations in each neighborhood.
+> Lastly, we acquired subway ridership from Metropolitan Transportation Authority’s turnstile data for the week of September 7, 2019. For each station, entry/exit of each turnstile is recorded. Then, we aggregated this information by taking the station-specific average of subway ridership across the 7 days in the week. Finally, we geotagged each listed station, then took the mean of ridership at all subway stations in each neighborhood to create.
 >
+- `mean_ridership`: Mean Subway Ridership by Neighborhood for the week of September 7th.
 
 
 
 ## Data Summaries
 
-> Our data has 242 observations of 23 variables. Below is a preview of our dataset with colnames attached.
+> Our data has 224 observations of 26 variables. Below is a preview of our dataset with colnames attached.
 
 ```{r eval = TRUE}
 library(kableExtra)
-dim(nyc_clean)
-
 kable(head(nyc_clean)) %>% kable_styling() 
 ```
 
-> Below is a summary of each variable's distribution.
+> Below is a numeric summary of each variable's distribution.
 
 ```{r eval = TRUE}
-summary(nyc_clean) 
+summary(nyc_clean)
+  library(table1)
+table1(~ total_pop + mean_income + below_poverty_line_count+ 
+         mean_rent + unemployment_count + white_count + latinx_count + black_count + 
+         native_count + asian_count + uninsured_count + school_count + eviction_count +
+         store_count + transportation_desert_4cat+ sub_count + bus_count + mean_ridership + perc_covered_by_transit | borough, data = nyc_clean %>% as.tibble(),  latex_options="HOLD_position") 
 ```
 
 
 
 ## Data Visuals
 
-```{r, fig.height=12*1.2, fig.width=12*1.2}
-library(egg)
-ggarrange(subway_loc, bus_loc, stops, bus_stops, ridership, access, ncol=2)
+### Non-Spatial {-}
+
+```{r}
+library(ggridges)
+plot_1<-nyc_clean %>% 
+  ggplot(aes(x=mean_income, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Mean Income", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_2<-nyc_clean %>% 
+  ggplot(aes(x=below_poverty_line_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Number Below Poverty Line", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_3<-nyc_clean %>% 
+  ggplot(aes(x=mean_rent, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Mean Rent", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_4<-nyc_clean %>% 
+  ggplot(aes(x=unemployment_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Unemployed Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_5<-nyc_clean %>% 
+  ggplot(aes(x=white_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="White Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_6<-nyc_clean %>% 
+  ggplot(aes(x=uninsured_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Uninsured Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+
+plot_7<-nyc_clean %>% 
+  ggplot(aes(x=school_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="School Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_8<-nyc_clean %>% 
+  ggplot(aes(x=eviction_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Eviction Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_9<-nyc_clean %>% 
+  ggplot(aes(x=store_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Food Retail Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_10<-nyc_clean %>% 
+  ggplot(aes(x=borough, fill=transportation_desert_4cat), alpha=.6) +
+  geom_bar(position="fill") +
+  scale_y_continuous(labels = seq(0, 100, by = 25)) +
+  labs(title="Subway Accessibility", y="", x="")+
+    theme(panel.grid.major = element_line("transparent"),
+         # axis.text.y.left = element_blank(),
+          axis.text.x.bottom = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold")) +
+   scale_fill_manual(values=c("#a45371","#e5b6c7","#ebebf7","#89a2d1"),
+                       guide = guide_legend(title = "Subway Accessibility"), na.value="#D6D6D6") 
+
+plot_11<-nyc_clean %>% 
+  ggplot(aes(x=sub_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Subway Stop Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+
+plot_12<-nyc_clean %>% 
+  ggplot(aes(x=bus_count, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Bus Stop Counts", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
+
+plot_13<-nyc_clean %>% 
+  ggplot(aes(x=mean_ridership, y=borough, fill=borough), alpha=.6) +
+  geom_density_ridges() +
+  labs(title="Mean Ridership", y="")+
+    theme(panel.grid.major = element_line("transparent"),
+          axis.text.y.left = element_text(size = 16, face = "bold"),
+          plot.title = element_text(size = 28,hjust=.5, face = "bold"),
+          legend.position="none") +
+  scale_fill_manual(values=c("#e09f3e","#16bac5","#717ec3","#5da271"))
 ```
 
-```{r, fig.height=20*1.2, fig.width=20*1.2}
+```{r, fig.height=8*4, fig.width=8*4}
+library(egg)
+ggarrange(plot_1, plot_2, plot_3, 
+          plot_4, plot_5, plot_6, 
+          plot_7, plot_8, plot_9, 
+          plot_10, plot_11, plot_12, 
+          plot_13, 
+          ncol=4)
+```
+
+
+
+### Spatial {-}
+
+```{r, fig.height=8*2, fig.width=8*3}
+library(egg)
+ggarrange(subway_loc, bus_loc, stops, bus_stops, ridership, access, ncol=3)
+```
+
+```{r, fig.height=8*3, fig.width=8*3}
 ggarrange(red, orange, yellow, green, teal, blue, purple, pink, brown, ncol=3)
 ```
 
-```{r, fig.height=6*1.2, fig.width=6*1.2}
+```{r, fig.height=16, fig.width=16}
 ggarrange(white, black, latinx, asian, ncol=2)
 ```
 
 ## Model Building
 
-### Models 1 & 2: No Grouping
+### Models 1 & 2: Non-Hierarchical Grouping
 
-We fit ungrouped poisson and negative binomial models below:
+#### Poisson {-}
 
+$$\begin{split}
+\text{White}_{i} \mid  \beta_{0}, \beta_1, ..., \beta_k & \sim \text{Pois}(\lambda_{i}) \; \; \; \; \text{where} \log(\lambda_{i}) = \beta_{0} + \sum^{10}_{k=1}X_{ik}\beta_k \\
+\beta_{0c}  &\sim N(0,1) \\
+\beta_{1} & \sim ~ N(0, 0.00013^2) \\				
+\beta_{2} & \sim ~ N(0, 0.000073^2) \\				
+\beta_{3} & \sim ~ N(0, 0.0053^2) \\				
+\beta_{4} & \sim ~ N(0, 0.0029^2) \\				
+\beta_{5} & \sim ~ N(0, 5.281^2) \\				
+\beta_{6} & \sim ~ N(0, 5.375^2) \\				
+\beta_{7} & \sim ~ N(0, 6.719^2) \\				
+\beta_{8} & \sim ~ N(0, 0.3905^2) \\				
+\beta_{9} & \sim ~ N(0,0.0717^2) \\				
+\beta_{10} & \sim ~ N(0, 0.063^2) \\
+\end{split}$$
 
-```{r, cache=TRUE}
+```{r}
 poisson_non_hierarchical <- stan_glm(
-  white_count ~  total_pop + mean_income + mean_rent + 
+  white_count ~ mean_income + mean_rent + 
     unemployment_count + sub_count + 
-    perc_covered_by_transit + school_count + 
+    transportation_desert_4cat + school_count + 
     store_count + bus_count + 
     eviction_count + uninsured_count,
   data = nyc_clean,
   family = poisson,
-  chains = 4, iter = 500*2, seed = 84735, refresh = 0
-)
-
-negbin_non_hierarchical <- stan_glm(
-  white_count ~  total_pop + mean_income + mean_rent + 
-    unemployment_count + sub_count + 
-    perc_covered_by_transit + school_count + 
-    store_count + bus_count + 
-    eviction_count + uninsured_count,
-  data = nyc_clean,
-  family = neg_binomial_2,
-  chains = 4, iter = 500*2, seed = 84735, refresh = 0
+  chains = 2, iter = 100*2, seed = 84735, refresh = 0
 )
 ```
 
 ```{r, fig.width=12, fig.height=6}
-check_1 <- pp_check(poisson_non_hierarchical) + 
+pp_check(poisson_non_hierarchical) + 
   xlab("White Resident Count") +
   labs(title = "Poisson")+
-  xlim(0,100000)+
-  theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
-check_2 <- pp_check(negbin_non_hierarchical) + 
-  xlab("White Resident Count") +
-  labs(title = "Negative Binomial")+
-  xlim(0,100000)+
   theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
 
-ggpubr::ggarrange(check_1, check_2, ncol=2, common.legend=TRUE, legend = "right")
-```
+library(kableExtra)
 
-```{r}
+tidy(poisson_non_hierarchical, effects = "fixed", conf.int = TRUE, conf.level = 0.95) %>% 
+  
+  mutate(estimate= ifelse(term == "(Intercept)", exp(estimate), (exp(estimate)-1)*100), 
+         conf.low= ifelse(term == "(Intercept)", exp(conf.low), (exp(conf.low)-1)*100), 
+         conf.high = ifelse(term == "(Intercept)", exp(conf.high), (exp(conf.high)-1)*100))%>%
+  filter(conf.low	> 0 & conf.high > 0 | conf.low	< 0 & conf.high < 0) %>%
+  kable(align = "c", caption = "Non-Hierarchical Poisson - Model Summary") %>% 
+  kable_styling()
+
+
 nyc_predict_clean <- nyc_clean %>%
   na.omit()
 set.seed(84735)
 
 predictions_poisson <-  posterior_predict(
-  poisson_non_hierarchical, newdata = nyc_predict_clean)
-
-predictions_negbin <-  posterior_predict(
   poisson_non_hierarchical, newdata = nyc_predict_clean)
 
 library(tidybayes)
@@ -508,7 +678,62 @@ ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_poisson,
   theme(panel.grid.major = element_line("transparent"),
         axis.title.y = element_blank(),
         axis.text.y = element_blank())+
-  coord_flip()
+  coord_flip() 
+```
+
+#### Negative Binomial {-}
+
+$$\begin{split}
+\text{White}_{ij} \mid  \beta_{0j}, \beta_1, ..., \beta_k, \sigma_y & \sim \text{NegBin}(\mu_{ij}, r) \; \; \; \; \text{where} \log(\lambda_{i}) = \beta_{0} + \sum^{10}_{k=1}X_{ik}\beta_k \\
+\beta_{0c}  &\sim N(0,1) \\
+\beta_{1} & \sim ~ N(0, 0.00013^2) \\				
+\beta_{2} & \sim ~ N(0, 0.000073^2) \\				
+\beta_{3} & \sim ~ N(0, 0.0053^2) \\				
+\beta_{4} & \sim ~ N(0, 0.0029^2) \\				
+\beta_{5} & \sim ~ N(0, 5.281^2) \\				
+\beta_{6} & \sim ~ N(0, 5.375^2) \\				
+\beta_{7} & \sim ~ N(0, 6.719^2) \\				
+\beta_{8} & \sim ~ N(0, 0.3905^2) \\				
+\beta_{9} & \sim ~ N(0,0.0717^2) \\				
+\beta_{10} & \sim ~ N(0, 0.063^2) \\
+\end{split}$$
+
+```{r, cache=TRUE}
+negbin_non_hierarchical <- stan_glm(
+  white_count ~  mean_income + mean_rent + 
+    unemployment_count + sub_count + 
+    transportation_desert_4cat + school_count + 
+    store_count + bus_count + 
+    eviction_count + uninsured_count,
+  data = nyc_clean,
+  family = neg_binomial_2,
+  chains = 2, iter = 100*2, seed = 84735, refresh = 0
+)
+  
+```
+
+```{r, fig.width=12, fig.height=6}
+pp_check(negbin_non_hierarchical) + 
+  xlab("White Resident Count") +
+  xlim(0,100000)+
+  labs(title = "Negative Binomial")+
+  theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
+
+tidy(negbin_non_hierarchical, effects = "fixed", conf.int = TRUE, conf.level = 0.95)%>% 
+  
+  mutate(estimate= ifelse(term == "(Intercept)", exp(estimate), (exp(estimate)-1)*100), 
+         conf.low= ifelse(term == "(Intercept)", exp(conf.low), (exp(conf.low)-1)*100), 
+         conf.high = ifelse(term == "(Intercept)", exp(conf.high), (exp(conf.high)-1)*100))%>%
+  filter(conf.low	> 0 & conf.high > 0 | conf.low	< 0 & conf.high < 0) %>%
+  kable(align = "c", caption = "Non-Hierarchichal Negative Binomial - Model Summary") %>% 
+  kable_styling()
+
+nyc_predict_clean <- nyc_clean %>%
+  na.omit()
+set.seed(84735)
+
+predictions_negbin <-  posterior_predict(
+  negbin_non_hierarchical, newdata = nyc_predict_clean)
 
 ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_negbin,
               prob_outer = 0.95) +
@@ -524,7 +749,7 @@ ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_negbin,
 ```
 
 
-### Models 2 & 3: Hierarchy by Neighborhood
+### Models 2 & 3: Hierarchy by Borough
 
 #### Poisson {-}
 
@@ -538,22 +763,21 @@ $$\begin{split}
 
 ```{r}
 poisson_hierarchical <- stan_glmer(
- white_count ~  total_pop + mean_income + mean_rent + 
+ white_count ~ mean_income + mean_rent + 
     unemployment_count + sub_count + 
-    perc_covered_by_transit + school_count + 
+    transportation_desert_4cat + school_count + 
     store_count + bus_count + 
-    eviction_count + uninsured_count + (1 | nta_id),
+    eviction_count + uninsured_count + (1 | borough),
   data = nyc_clean,
   family = poisson,
-  chains = 4, iter = 500*2, seed = 84735, refresh = 0
+  chains = 2, iter = 100*2, seed = 84735, refresh = 0
 )
 ```
 
 ```{r, fig.width=12, fig.height=6}
-check_1 <- pp_check(poisson_hierarchical) + 
+pp_check(poisson_hierarchical) + 
   xlab("White Resident Count") +
   labs(title = "Poisson")+
-  xlim(0,100000)+
   theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
 
 library(kableExtra)
@@ -603,20 +827,19 @@ $$\begin{split}
 
 ```{r,  cache=TRUE}
 negbin_hierarchical <- stan_glmer(
- white_count ~  total_pop + mean_income + mean_rent + 
+ white_count ~ mean_income + mean_rent + 
     unemployment_count + sub_count + 
-    perc_covered_by_transit + school_count + 
+    transportation_desert_4cat + school_count + 
     store_count + bus_count + 
-    eviction_count + uninsured_count + (1 | nta_id),
+    eviction_count + uninsured_count + (1 | borough),
   data = nyc_clean,
   family = neg_binomial_2,
-  chains = 4, iter = 500*2, seed = 84735, refresh = 0)
+  chains = 2, iter = 100*2, seed = 84735, refresh = 0)
 ```
 
 ```{r, fig.width=12, fig.height=6}
-check_2 <- pp_check(negbin_hierarchical) + 
+pp_check(negbin_hierarchical) + 
   xlab("White Resident Count") +
-  xlim(0,100000)+
   labs(title = "Negative Binomial")+
   theme(plot.title =  element_text(face="bold", size=25, hjust=.5)) 
 
@@ -652,18 +875,19 @@ ppc_intervals(nyc_predict_clean$white_count, yrep = predictions_negbin,
 
 ## Next Steps
 
-For next steps, we want to tie up some loose ends for our models we already built and figure out whether or not we want to keep them or change some variables. Moving forward, we want to build some non-hierarchical models predicting subway and bus count using the demographic data (like median income, rent, percentage white population, etc) to see the flip-side of what we are looking at right now with our models above. For the models that we have right now that are hierarchical, we might want to include latitude and longitude variables into our model so that it can take space into account because the way that it is right now, the model doesn't take into account how close or far NTAs are and whether or not they are within the same boroughs. 
+> We intend to adjust our model specifications and reconsider the construction and inclusion of our predictors. For example, we may want to rethink how we're making our transit-access variable, whether including car ownership or transit use, and what predictors we're specifically using in our models.
+>
+> Moving forward, we want to build some non-hierarchical models predicting subway and bus count using the demographic data (like median income, rent, percentage white population, etc) to see the flip-side of what we are looking at right now with our models above. 
+>
+> Our current "hierarchical models" attempt to capture a spatial interaction, but are not properly set up. So, we will include latitude and longitude variables into our model to account for spatial relationships and perhaps do away with hierarchy. However, we may introduce a borough-wide level of grouping or use `CARBayes` to adjust for the spatial factors.
 
 
 ## Participation
 
-
-Sam: Pulled subway ridership data, cleaned it and combined it with existing spatial data 
-
-Vichy: Helped clean data and spent some time catching up and doing research
-
-Freddy: Pulled data from the tidycensus package and NYC Open data and made visualizations + built models 
-
-Juthi: Compiled and joined data and built some elementary models 
+>
+- **Sam Ding**: Pulled and prepared subway ridership and access data, then harmonized transit data with existing neighborhood data. 
+- **Vichy Meas**: Helped clean both transit and demographic data, scaffolded the checkpoint 3 responses, and helped plan out transit questions. 
+- **Freddy Barragan**: Pulled and prepared grocery, bus stop, school, eviction, and census data, made exploratory visualizations by neighborhood, built/coded our proposed demographic models.
+- **Juthi Dewan**: Harmonized, cleaned, and joined all disparate datasets, prepared our data summaries, built/coded our proposed demographic models.
 
 
